Cambios sobre ModeloCalculadora::mcd().